--- a/3-guia/ejercicios-3/ej-24-3.tex
+++ b/3-guia/ejercicios-3/ej-24-3.tex
@@ -1,4 +1,5 @@
 \def\Pedro{\href{https://www.youtube.com/watch?v=RXKabdUBiWM}{Pedro}\xspace}
+\def\limon{\orange{\faIcon{lemon}}}
 
 \begin{enunciado}{\ejercicio}
   Pedro compró 14 unidades de fruta: 6 duraznos, 2 naranjas, 1 banana, 1 pera, 1 higo, 1 kiwi, 1 ciruela, 1 mandarina.
@@ -19,7 +20,7 @@ Pero tiene alto mambo con las \orange{naranjas}. Vamos a ver como calcular que e
           \begin{array}{|c|c|c|c|c|c|c|c|}
             \hline \rowcolor{green!8}
                             & \text{lunes}              & \text{martes} & \text{miércoles} & \text{jueves} & \text{viernes} & \text{sábado} & \text{domingo} \\ \hline
-            \text{desayuno} & $\orange{\faIcon{lemon}}$ & 1             & 3                & 5             & 7              & 9             & 11             \\ \hline
+            \text{desayuno} & $\limon$ & 1             & 3                & 5             & 7              & 9             & 11             \\ \hline
             \text{merienda} & \times\red{!}             & 2             & 4                & 6             & 8              & 10            & 12             \\\hline
           \end{array}
         $$
@@ -30,8 +31,8 @@ Pero tiene alto mambo con las \orange{naranjas}. Vamos a ver como calcular que e
           \begin{array}{|c|c|c|c|c|c|c|c|}
             \hline \rowcolor{green!8}
                             & \text{lunes}              & \text{martes} & \text{miércoles} & \text{jueves}             & \text{viernes} & \text{sábado} & \text{domingo} \\ \hline
-            \text{desayuno} & $\orange{\faIcon{lemon}}$ &               &                  &                           &                &               &                \\ \hline
-            \text{merienda} & \times\red{!}             &               &                  & $\orange{\faIcon{lemon}}$ &                &               &                \\\hline
+            \text{desayuno} & $\limon$ &               &                  &                           &                &               &                \\ \hline
+            \text{merienda} & \times\red{!}             &               &                  & $\limon$ &                &               &                \\\hline
           \end{array}
         $$
         Peeeeeero, ojo que ¡Estamos contando el doble! A \Pedro no le importa cual de las 2 \orange{naranjas} come cada día.
