--- a/macros/qr.tex
+++ b/macros/qr.tex
@@ -37,7 +37,7 @@
 
     { \Large
       Si querés mandar un ejercicio o avisar de algún error,
-      lo más fácil es por \href{\dirTelegram}{Telegram \faIcon{telegram}}.\par\medskip
+      lo más fácil es por \href{\dirTelegram}{Telegram \telegram}.\par\medskip
     }
     \qrcode[height=4cm]{\dirTelegram}
   \end{minipage}
