--- a/3-guia/ejercicios-3/ej-23-3.tex
+++ b/3-guia/ejercicios-3/ej-23-3.tex
@@ -1,14 +1,11 @@
-\ejercicio
-
-Con la palabra $polinomios$,
-
-\begin{enumerate}[label=\roman*)]
-  \item ¿Cuántos anagramas pueden formarse en las que las 2 letras $i$ no estén juntas?
-  \item ¿Cuántos anagramas puede formarse en los que la letra $n$ aparezca a la izquierda de la letra $s$ y
-        la letra $s$ aparezca a la izquierda de la letra $p$ (no necesariamente una al lado de la otra)?
-\end{enumerate}
-
-\separadorCorto
+\begin{enunciado}{\ejercicio}
+  Con la palabra $polinomios$,
+  \begin{enumerate}[label=\roman*)]
+    \item ¿Cuántos anagramas pueden formarse en las que las 2 letras $i$ no estén juntas?
+    \item ¿Cuántos anagramas puede formarse en los que la letra $n$ aparezca a la izquierda de la letra $s$ y
+          la letra $s$ aparezca a la izquierda de la letra $p$ (no necesariamente una al lado de la otra)?
+  \end{enumerate}
+\end{enunciado}
 
 \begin{enumerate}[label=\roman*)]
   \item
@@ -44,3 +41,7 @@ Con la palabra $polinomios$,
         $ tengo que rellenar con 7 letras los lugares que sobran, teniendo en cuenta las repeticiones de las $"o"$ y de las $"i"$:
         $\binom{10}{3} \cdot \frac{7!}{3!2!}$
 \end{enumerate}
+
+\begin{aportes}
+  \item \aporte{\dirRepo}{naD GarRaz \github}
+\end{aportes}
