fix extra 7 guia 1

--- a/1-guia/ejercicios-1-extra/ej-extra-7-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-7-1.tex
@@ -183,7 +183,7 @@
           \binom{100}{100} = 1
         $$
 
-        Juntando todo eso con el resultado de la parte \textir{par} quedaría que el total de conjuntos $A$ es:
+        Juntando todo eso con el resultado de la parte \textit{par} quedaría que el total de conjuntos $A$ es:
         $$
           \cajaResultado{
             \binom{50}{30} \cdot \sumatoria{\blue{i} = 0 }{100} \binom{100}{\blue{i}}
